# pandoc_crossref_filter

./: README.md  setup.cfg  src_README.md
lua-filter/: colwidth.lua  tablewidth.lua
sample/: sample.md  src_sample.md
src/: code_block_ref.py  crossref_utils.py  image_cross_ref.py  main.py  pandoc_crossref_filter.py  section_cross_ref.py  table_cross_ref.py
src/pandoc_crossref_filter/: code_block_ref.py  config.py  const.py  crossref_utils.py  figure_cross_ref.py  image_cross_ref.py  main.py  mermaid_wrapper.py  output_format.py  pandoc_crossref_filter.py  plantuml_wrapper.py  section_cross_ref.py  table_cross_ref.py  utils.py
