[metadata]
name = pandoc_crossref_filter
version = 0.1
description = Pandoc's custom filter for cross reference in markdown text.
url = https://github.com/Akira106/pandoc_crossref_filter
author = Akira Matsushita
author_email = akinyarosu@gmain.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    panflute >= 2.3.1
python_requires = >=3.8.1
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pandoc_crossref_filter = pandoc_crossref_filter.main:main
